--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "react-project",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://zhi-sheng.github.io",
+    "homepage": "https://zhi-sheng.github.io/react-project",
     "dependencies": {
         "-": "^0.0.1",
         "@testing-library/jest-dom": "^5.16.2",
